rearrange files to match assignment spec

--- a/ctutorial/Makefile
+++ b/ctutorial/Makefile
@@ -2,11 +2,14 @@
 
 CC=gcc
 CFLAGS=
+OBJS=list.o list_harness.o
 
-list_harness: list.o
-	$(CC) $(CFLAGS) list.o -o list_harness
+list_harness: $(OBJS)
+	$(CC) $(CFLAGS) $(OBJS) -o list_harness
 
 list.o: list.c list.c
+
+list_harness.o: list_harness.c list.h
 
 clean:
 	rm *.o
